<resources>
    <string name="app_name">Login LexDroid</string>

    <string name="action_settings">Settings</string>

    <string name="login">Bienvenido</string>
    <string name="login_sub">Por favor, introduzca sus datos para acceder.</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recuperar_password">Recuperar contraseña</string>

</resources>