<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <TextView
        android:id="@+id/textLogin"
        android:text="@string/login"
        android:textSize="32sp"
        android:textColor="#880000"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textLoginSub"
        android:text="@string/login_sub"
        android:textColor="#000000"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editUsuario"
        android:hint="@string/usuario"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPassword"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/iniciar_sesion"
            android:textColor="#FFFFFF"
            android:background="#880000"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRecuperar"
            android:text="@string/recuperar_password"
            android:textColor="#FFFFFF"
            android:background="#880000"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>